# crusty_cards

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md
.github/workflows/: publish.yml  rust_main.yml  sbom.yml  scorecard.yml
src/: lib.rs
src/objects/: card.rs  color.rs  deck.rs  mod.rs  rank.rs  suit.rs
src/traits/: comparator.rs  factory.rs  mod.rs
src/utils/: mod.rs  standard.rs
tests/: card_tests.rs  color_tests.rs  comparator_tests.rs  deck_tests.rs  factory_tests.rs  rank_tests.rs  suit_tests.rs
