[package]
name = "crusty_cards"
version = "0.0.0"
edition = "2021"
description = "Playing Card and Deck Library"
authors = ["Ernest Duckworth IV"]
license = "Beerware"
license-file = "LICENSE"
readme = "README.md"
keywords = ['cards', 'playing-cards', 'casino', 'card-games', 'games']
categories = []

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_yaml = "0.9"
