[package]
name = "crusty_cards"
version = "0.0.3"
edition = "2021"
description = "Playing Card and Deck Library"
authors = ["Ernest Duckworth IV"]
license = "Beerware"
readme = "README.md"
keywords = ["cards", "playing-cards", "casino", "card-games", "games"]
categories = ["games", "data-structures", "simulation", "algorithms"]
repository = 'https://github.com/ernman37/crusty_cards'

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_yaml = "0.9"
